2009-12-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/extern/paisley (added):
	* python/mushin/extern/paisley/mapping.py (added):
	* python/mushin/extern/paisley/tests (added):
	* python/mushin/extern/paisley/tests/test_mapping.py (added):
	* python/mushin/extern/paisley/tests/test_views.py (added):
	* python/mushin/extern/paisley/tests/__init__.py (added):
	* python/mushin/extern/paisley/tests/test_couchdb.py (added):
	* python/mushin/extern/paisley/views.py (added):
	* python/mushin/extern/paisley/__init__.py (added):
	* python/mushin/extern/paisley/couchdb.py (added):
	  Do an import of our paisley branch.

2009-12-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/maemo/main.py:
	  Tie some windows together to get an idea of program flow.

2009-12-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/maemo/main.py:
	* python/mushin/maemo/things.py:
	  Fixed some ui bugs.
	* python/mushin/maemo/new.py (added):
	* bin/mushin-maemo (added):
	  Added a first widget for adding a new thing.

2009-12-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/maemo (added):
	* python/mushin/maemo/things.py (added):
	* python/mushin/maemo/__init__.py (added):
	* python/mushin/maemo/main.py (added):
	  Add a first stab at a widget to display things.

2009-12-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* bin/gtd:
	  Another rename.

2009-12-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/project.py:
	* python/mushin/command/replicate.py:
	* python/mushin/model/couch.py:
	  More renames.

2009-12-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/display.py:
	* python/mushin/command/list.py:
	* python/mushin/command/main.py:
	* python/mushin/command/project.py:
	* python/mushin/command/replicate.py:
	* python/mushin/command/thing.py:
	* python/mushin/common/log.py: